<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    app:hintTextAppearance="@style/CustomHintStyle">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/userIcon"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:contentDescription="@string/logInUserIconDescription"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/user_icon" />

            <EditText
                android:id="@+id/logInUserEmailInputField"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_marginTop="30dp"
                android:autofillHints=""
                android:background="@drawable/input_field_background"
                android:gravity="center_vertical"
                android:hint="@string/userEmailInputFieldHint"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="#505050"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userIcon"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/logInPasswordInputField"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_field_background"
                android:gravity="center_vertical"
                android:hint="@string/passwordInputFieldHint"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="#505050"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logInUserEmailInputField" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="350dp"
                android:layout_height="70dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logInPasswordInputField">

                <Button
                    android:id="@+id/registrationPageButton"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="104dp"
                    android:background="@android:color/transparent"
                    android:text="@string/registrationPageButtonText"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:backgroundTint="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/doesAccountExists2"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/doesAccountExists2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="16dp"
                    android:text="@string/doesAccountExists2Text"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.509" />

                <Button
                    android:id="@+id/logInButton"
                    android:layout_width="90dp"
                    android:layout_height="48dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/button_background"
                    android:text="@string/logInButtonText"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:backgroundTint="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>